--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -10,7 +10,7 @@
         </div>
         <form action="/search" method="get" role="search">
             <input name="q" value="{{ search.terms | escape }}" type="text" placeholder="Buscar productos...">
-            <button type="submit">Buscar producto</button>
+            <button class='search-button-404' type="submit">Buscar producto</button>
         </form>
     </div>
 </div>
