--- a/templates/page.faq.liquid
+++ b/templates/page.faq.liquid
@@ -4,32 +4,74 @@
   </div>
 </div>
 
-
 <div class="faq-main-container">
-    <div class="faq-question-container">
-        <h1 class="uppercase">Preguntas Frecuentes Romen Viveros</h1>
-
-        <h2 class="uppercase">Devoluciones y Reembolsos</h2>
-        <div class="faq-container">
-            <span class="faq-question">Do you allow refunds/returns?</span>
-            <p class="faq-answer">All sales are final. We do not offer refunds/exchanges, nor do we allow cancellations/ returns. Please keep in mind that colors will appear different on individuals depending on skin tone and lip pigmentation. Items will not be replaced or exchanged for this reason. KKWBeauty.com reserves the right to refuse any returns at any time.</p>
-        </div>
-        <div class="faq-container">
-            <span class="faq-question">Do you allow refunds/returns?</span>
-            <p class="faq-answer">All sales are final. We do not offer refunds/exchanges, nor do we allow cancellations/ returns. Please keep in mind that colors will appear different on individuals depending on skin tone and lip pigmentation. Items will not be replaced or exchanged for this reason. KKWBeauty.com reserves the right to refuse any returns at any time.</p>
-        </div>
-        <h2 class="uppercase">Devoluciones y Reembolsos</h2>
-        <div class="faq-container">
-            <span class="faq-question">Do you allow refunds/returns?</span>
-            <p class="faq-answer">All sales are final. We do not offer refunds/exchanges, nor do we allow cancellations/ returns. Please keep in mind that colors will appear different on individuals depending on skin tone and lip pigmentation. Items will not be replaced or exchanged for this reason. KKWBeauty.com reserves the right to refuse any returns at any time.</p>
-        </div>
-        <div class="faq-container">
-            <span class="faq-question">Do you allow refunds/returns?</span>
-            <p class="faq-answer">All sales are final. We do not offer refunds/exchanges, nor do we allow cancellations/ returns. Please keep in mind that colors will appear different on individuals depending on skin tone and lip pigmentation. Items will not be replaced or exchanged for this reason. KKWBeauty.com reserves the right to refuse any returns at any time.</p>
-        </div>
-        <div class="faq-container">
-            <span class="faq-question">Do you allow refunds/returns?</span>
-            <p class="faq-answer">All sales are final. We do not offer refunds/exchanges, nor do we allow cancellations/ returns. Please keep in mind that colors will appear different on individuals depending on skin tone and lip pigmentation. Items will not be replaced or exchanged for this reason. KKWBeauty.com reserves the right to refuse any returns at any time.</p>
-        </div>
+  <div class="faq-question-container">
+    <h2 class="uppercase">
+      ¿CÓMO PUEDO COMUNICARME CON SU EQUIPO DE SERVICIO AL CLIENTE Y CUÁNDO DEBO
+      ESPERAR UNA RESPUESTA?
+    </h2>
+    <div class="faq-container">
+      <p class="faq-answer">
+        Para consultas de servicio al cliente, envíe un correo electrónico a
+        help@camwo.com. Nuestro equipo de servicio al cliente está disponible de
+        lunes a viernes de 8 a.m. A 5 p.m. Hacemos nuestro mejor esfuerzo para
+        responder a todos los clientes dentro de 48 horas. Los tiempos de
+        respuesta pueden extenderse durante las vacaciones, promociones e
+        inmediatamente después de lanzamientos / reabastecimientos. Las
+        consultas se responden en el orden en que se reciben; no envíe varios
+        correos electrónicos, ya que esto lo colocará al final de la cola.
+      </p>
     </div>
+    <h2 class="uppercase">
+      NO HE RECIBIDO LA CONFIRMACIÓN DE MI PEDIDO, ¿SE REALIZÓ MI PEDIDO?
+    </h2>
+    <div class="faq-container">
+      <p class="faq-answer">
+        Los correos electrónicos de confirmación de pedidos pueden retrasarse
+        como resultado de un gran volumen de pedidos. Póngase en contacto con
+        nuestro equipo de servicio al cliente help@camwo.com si no ha recibido
+        su correo electrónico de confirmación después de 24 horas de su compra.
+      </p>
+    </div>
+    <h2 class="uppercase">
+      ¿PUEDO HACER CAMBIOS EN MI PEDIDO UNA VEZ REALIZADO?
+    </h2>
+    <div class="faq-container">
+      <p class="faq-answer">
+        Debido a la naturaleza extremadamente limitada de nuestros productos,
+        todas las ventas son definitivas. Los pedidos no se pueden cancelar,
+        cambiar o modificar una vez realizados. Asegúrese de que toda la
+        información sea correcta antes de enviar su pedido.
+      </p>
+    </div>
+    <h2 class="uppercase">¿CUÁNDO SE ENTREGARÁ MI PAQUETE?</h2>
+    <div class="faq-container">
+      <p class="faq-answer">
+        El tiempo de procesamiento de los pedidos es de 3-5 días hábiles (los
+        días hábiles no incluyen fines de semana ni feriados). Estos tiempos
+        pueden extenderse durante las vacaciones, lanzamientos /
+        reabastecimientos, lanzamientos de edición limitada y promociones. Una
+        vez enviado, el tiempo de entrega dentro de los Estados Unidos es de 3 a
+        6 días y de 10 a 21 días hábiles a nivel internacional. No ofrecemos
+        envío urgente en este momento. Todos los pedidos se envían a través de
+        USPS. Tenga en cuenta que no somos responsables de ninguna entrega de
+        envío que pueda verse afectada, entre otros, por lo siguiente: aduanas,
+        sucesos naturales, huelgas / retrasos en el transporte aéreo / terrestre
+        o transferencias de USPS a los carteros internacionales.
+      </p>
+    </div>
+    <h2 class="uppercase">
+      ¿PUEDO RESERVAR ARTÍCULOS AGREGÁNDOLOS A MI CARRITO?
+    </h2>
+    <div class="faq-container">
+      <p class="faq-answer">
+        Todos los productos de CAMWO.com están en stock y disponibles para
+        pedidos (a menos que se indique lo contrario). Los artículos no se
+        pueden reservar manteniéndolos en su carrito. La disponibilidad del
+        producto es extremadamente limitada y, por lo tanto, puede agotarse
+        antes de que se complete la compra. Las transacciones de pedidos se
+        completan en el orden en que se reciben.
+      </p>
+    </div>
+  </div>
 </div>
