--- a/assets/collection.scss
+++ b/assets/collection.scss
@@ -1,60 +1,70 @@
 $main_color: #000000;
-$secondary_color: #FFFFFF;
-$terciary_color: #888B8D;
+$secondary_color: #ffffff;
+$terciary_color: #888b8d;
 @mixin phone {
-    @media (max-width: 599px) {
-        @content;
-    }
+  @media (max-width: 599px) {
+    @content;
+  }
 }
 
 @mixin tablet-portrait {
-    @media (min-width: 600px) {
-        @content;
-    }
+  @media (min-width: 600px) and (max-width: 873px) {
+    @content;
+  }
 }
 
 @mixin tablet-landscape {
-    @media (min-width: 900px) and (max-width:1100px) {
-        @content;
-    }
+  @media (min-width: 874px) and (max-width: 1100px) {
+    @content;
+  }
 }
 
 .collection-banner-container {
+  width: 100%;
+  height: 35vh;
+  position: relative;
+  @include phone {
+    height: 32vh;
+  }
+  img {
     width: 100%;
-    height: 35vh;
-    position: relative;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+  .collection-fader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.8) 17%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding: 20px 40px;
     @include phone {
-        height: 32vh;
+      padding: 10px 20px;
     }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 0;
+    h1 {
+      color: $secondary_color;
+      text-transform: uppercase;
+      @include phone {
+        font-size: 1.4rem !important;
+      }
+      @include tablet-portrait {
+        font-size: 1.4rem !important;
+      }
     }
-    .collection-fader {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 4;
-        background: linear-gradient(0deg, rgba(0,0,0,0.8) 17%, rgba(255,255,255,0) 100%);
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-end;
-        padding: 20px 40px;
-        @include phone {
-            padding: 10px 20px;
-        }
-        h1 {
-            color: $secondary_color;
-            text-transform: uppercase;
-        }
-    }
-    .collection-noimage-background {
-        width: 100%;
-        height: 100%;
-        background-color:$main_color;
-    }
+  }
+  .collection-noimage-background {
+    width: 100%;
+    height: 100%;
+    background-color: $main_color;
+  }
 }
