--- a/assets/faq.scss
+++ b/assets/faq.scss
@@ -1,82 +1,89 @@
 $main_color: #000000;
-$secondary_color: #FFFFFF;
-$terciary_color: #888B8D;
+$secondary_color: #ffffff;
+$terciary_color: #888b8d;
 @mixin phone {
-    @media (max-width: 599px) {
-        @content;
-    }
+  @media (max-width: 599px) {
+    @content;
+  }
 }
 
 @mixin tablet-portrait {
-    @media (min-width: 600px) {
-        @content;
-    }
+  @media (min-width: 600px) {
+    @content;
+  }
 }
 
 @mixin tablet-landscape {
-    @media (min-width: 900px) and (max-width:1100px) {
-        @content;
-    }
+  @media (min-width: 900px) and (max-width: 1100px) {
+    @content;
+  }
 }
 
 .uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .faq-banner-container {
-    height: 30vh !important;
-    @include phone {
-        height: 15vh !important;
-    }
+  height: 30vh !important;
+  @include phone {
+    height: 15vh !important;
+  }
 }
 .faq-fader {
-    background: none !important;
-    background-color:#83577D !important;
+  background: none !important;
+  background-color: black !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  h1 {
+    font-size: 3rem !important;
+  }
 }
 .faq-main-container {
-    width: 100%;
-    padding: 40px 0px 0px 0px;
+  width: 100%;
+  padding: 40px 0px 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .faq-question-container {
+    width: 60%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    .faq-question-container {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        @include phone {
-            width: 93%;
-        }
-        h1 {
-            margin-bottom: 20px;
-            margin-top: 20px;
-            @include phone {
-                font-size: 1.5em;
-            }
-        }
-        h2 {
-            margin-bottom: 20px;
-            margin-top: 20px;
-            @include phone {
-                font-size: 1.3em;
-            }
-        }
-        .faq-question {
-            text-transform: uppercase;
-            font-size: 1.4em;
-            font-weight: 500;
-            @include phone {
-                font-size: 1.2em;
-            }
-        }
-        .faq-answer {
-            background-color: rgba(131, 87, 125, 0.08);
-            line-height: 2em;
-            word-break: break-word;
-            margin-bottom: 20px;
-            @include phone {
-                margin-top: 10px;
-            }
-        }
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    @include phone {
+      width: 93%;
     }
+    h1 {
+      margin-bottom: 20px;
+      margin-top: 20px;
+      @include phone {
+        font-size: 1.5em;
+      }
+    }
+    h2 {
+      margin-bottom: 20px;
+      margin-top: 20px;
+      @include phone {
+        font-size: 1.3em;
+      }
+    }
+    .faq-question {
+      text-transform: uppercase;
+      font-size: 1.4em;
+      font-weight: 500;
+      @include phone {
+        font-size: 1.2em;
+      }
+    }
+    .faq-answer {
+      background-color: rgba(131, 87, 125, 0.08);
+      line-height: 2em;
+      word-break: break-word;
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      @include phone {
+        margin-top: 10px;
+      }
+    }
+  }
 }
